# ipysankeywidget

./: .gitignore  DEVELOPING.md  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.md  install.json  ipysankeywidget.json  jupyter-sankey-widget.json  meta.yaml  package-lock.json  package.json  postBuild  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: Automation.ipynb  Exporting Images.ipynb  Linking and Layout.ipynb  More examples.ipynb  README.ipynb  README.md  SankeyWidget Example.ipynb  Simple example.ipynb
ipysankeywidget/: __init__.py  _version.py  sankey_widget.py  widget_nbsankey.py
ipysankeywidget/static/ipysankeywidget/css/: widget_nbsankey.css
ipysankeywidget/static/ipysankeywidget/js/: view.js  widget_nbsankey.js
ipysankeywidget/static/less/: widget_nbsankey.less
ipysankeywidget/static/src/: utils.js  view.js
ipysankeywidget/tests/: test_nbsankey.coffee  test_widgets.py
js/: README.md  package-lock.json  package.json  webpack.config.js  widget.ts
js/lib/: embed.js  extension.js  index.js  labplugin.js  sankey-widget.js  sankey_widget.js
js/src/: embed.js  extension.js  sankey-widget.js
src/ipysankeywidget/: __init__.py
