[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipysankeywidget"
version = "0.6.0"
dependencies = ["anywidget"]
readme = "README.md"
description = "Display Sankey diagrams in Jupyter"
authors = [
  {name = "Rick Lupton"},
]
license = "BSD-3-Clause"

[project.urls]
homepage = "https://github.com/ricklupton/ipysankeywidget"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab", "ipykernel"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab", "ipykernel"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipysankeywidget/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipysankeywidget/static/widget.js"]
skip-if-exists = ["src/ipysankeywidget/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
